tests/sysy/valid/short_circuit.sy
int main() {
    int a = 0;
    if (a != 0 && 10 / a > 1) {
        return 1;
    }
    return 0;
}
