tests/sysy/invalid/putf_missing_string.sy
int main() {
    putf(1);
    return 0;
}
